--- a/css/simple-slider.css
+++ b/css/simple-slider.css
@@ -21,7 +21,8 @@
         right: 0;
         left: 0;
         z-index: 1;
-        opacity: 0; }
+        opacity: 0;
+        background-size: cover; }
         .realbig-slider-container .realbig-slider .inner .slide.active, .realbig-slider-container .realbig-slider .inner .slide.left, .realbig-slider-container .realbig-slider .inner .slide.right {
           z-index: 2;
           opacity: 1; }
